# student-archive

./: README.md
DFP/: CMakeLists.txt  dfp.c  dfp.h  main.c  matrix_tricks.c  matrix_tricks.h
IZ_2_18/: .travis.yml  CMakeLists.txt
IZ_2_18/tests/: CMakeLists.txt
computer_geometry/: README.md  utils.js
computer_geometry/Lab/02/: 02.html  02.js
computer_geometry/Lab/03/: 03.html  03.js
computer_geometry/Lab/04/: 04.html  04.js
computer_geometry/Lab/05/: 05_2.html  05_2.js  05_3.html  05_3.js
computer_geometry/Lab/06/: 06_1.html  06_1.js  06_2.html  06_2.js  06_3.html  06_3.js  06_4.html  06_4.js  06_5.html  06_5.js  06_6.html  06_6.js
computer_geometry/Lab/07/: 07_1.html  07_1.js  07_2.html  07_2.js  07_3_2.html  07_3_2.js  07_4_2.html  07_4_2.js  07_5.js  07_6.html  07_6.js  07_6_1.html  07_6_2.html  07_6_2.js
computer_geometry/Lab/08/: 08_1.html  08_1.js  08_3.html  08_3.js  08_7.html  08_7.js
computer_geometry/dz/: cube.js  frag.frag  main.html  main.js
computer_geometry/dz/with_webglMatrix/: loadGLSLsrc.js  main.html  main.js
computer_geometry/sandbox/: cube.js  m4.js  main.html  main.js
computer_geometry/sandbox2/: main.html  vertex.vert
mke/: geometry.py  main.py  primitives.py
simplex/: CMakeLists.txt  README.md  main.c  prepare_data.c  prepare_data.h
simplex/data/: matrix.txt  vectorB.txt
webTechParkDz/: .gitignore  README.md
webTechParkDz/techparkWeb/: manage.py
webTechParkDz/techparkWeb/techparkWeb/: settings.py  urls.py  wsgi.py
webTechParkDz/techparkWeb/techparkWeb/migrations/: 0001_initial.py  0002_auto_20191030_0757.py  0003_auto_20191105_0819.py  0004_auto_20191105_0934.py  0005_auto_20191105_1059.py  0006_auto_20191105_1108.py  0007_auto_20191105_1237.py  0008_author_img.py
webTechParkDz/techparkWeb/templates/: allTags.html  base.html  besttags.html  buf.html  card.html  filterByTag.html  index.html  login.html  newPost.html  profile.html  register.html
webTechParkDz/techparkWeb/webApp/: admin.py  forms.py  models.py  modelsController.py  views.py
